# crud-api

./: Dockerfile  main.py  models.py  pyproject.toml  requirements.txt
app/db/: db.py
app/filters/: created_video_filter.py  published_video_filter.py  video_filter.py
app/models/: model.py
app/routers/: created_video_router.py  published_video_router.py  user_router.py  video_router.py
app/schemas/: created_video_schema.py  published_video_schema.py  video_schema.py
app/security/: login_router.py  utils.py
